# roof-ranker

./: .gitignore  README.md  pyproject.toml
src/roof_ranker/: __init__.py  app.py  config.py
src/roof_ranker/utils/: __init__.py  calculator.py  constants.py  geo_handler.py  neural_vision.py  vision.py
tests/: test_calculator.py  test_geo_handler.py  test_level2.py  test_neural_vision.py  test_quick.py
